// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistributionStack TC-DS-01: スナップショットテスト（devConfig） CloudFormation テンプレートのスナップショットテスト（Dev環境） 1`] = `
{
  "Outputs": {
    "DistributionDomainName": {
      "Description": "CloudFront Distribution domain name",
      "Export": {
        "Name": "dev-DistributionDomainName",
      },
      "Value": {
        "Fn::GetAtt": [
          "CloudFrontDistributionEAB06B35",
          "DomainName",
        ],
      },
    },
    "DistributionId": {
      "Description": "CloudFront Distribution ID",
      "Export": {
        "Name": "dev-DistributionId",
      },
      "Value": {
        "Ref": "CloudFrontDistributionEAB06B35",
      },
    },
    "StaticContentBucket": {
      "Description": "S3 bucket name for static content",
      "Export": {
        "Name": "dev-StaticContentBucket",
      },
      "Value": {
        "Ref": "S3BucketB0646FC4",
      },
    },
    "StaticContentBucketArn": {
      "Description": "S3 bucket ARN for static content",
      "Export": {
        "Name": "dev-StaticContentBucketArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "S3BucketB0646FC4",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CloudFrontDistributionEAB06B35": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/static/*",
              "TargetOriginId": "SnapshotDistributionStackCloudFrontDistributionOrigin23502880E",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/assets/*",
              "TargetOriginId": "SnapshotDistributionStackCloudFrontDistributionOrigin23502880E",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/*",
              "TargetOriginId": "ALBOrigin",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 10,
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 10,
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 500,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 502,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 503,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 504,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
              "PUT",
              "PATCH",
              "POST",
              "DELETE",
            ],
            "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
            "Compress": true,
            "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
            "TargetOriginId": "ALBOrigin",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": true,
          "Origins": [
            {
              "CustomOriginConfig": {
                "HTTPSPort": 443,
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::ImportValue": "SnapshotPrereqStack:ExportsOutputFnGetAttTestAlb8F0A2B31DNSNameF75896CF",
              },
              "Id": "ALBOrigin",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "S3BucketOACDC0AF436",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "S3BucketB0646FC4",
                  "RegionalDomainName",
                ],
              },
              "Id": "SnapshotDistributionStackCloudFrontDistributionOrigin23502880E",
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Ref": "CloudFrontDistributionOrigin2S3Origin43D62AC5",
                      },
                    ],
                  ],
                },
              },
            },
          ],
          "PriceClass": "PriceClass_200",
          "WebACLId": {
            "Fn::GetAtt": [
              "WafWebACL7DF0AFD1",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "CloudFrontDistributionOrigin2S3Origin43D62AC5": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "Identity for SnapshotDistributionStackCloudFrontDistributionOrigin23502880E",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "S3BucketB0646FC4",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "S3BucketAutoDeleteObjectsCustomResourceBCCB1A0F": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "S3BucketPolicy1BDDD1CD",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "S3BucketB0646FC4",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "S3BucketB0646FC4": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "dev-static-content-123456789012",
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "S3BucketOACDC0AF436": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Description": "OAC for dev static content bucket",
          "Name": "dev-oac",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "S3BucketPolicy1BDDD1CD": {
      "Properties": {
        "Bucket": {
          "Ref": "S3BucketB0646FC4",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "S3BucketB0646FC4",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "S3BucketB0646FC4",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "CloudFrontDistributionOrigin2S3Origin43D62AC5",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "S3BucketB0646FC4",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:aws:cloudfront::123456789012:distribution/",
                        {
                          "Ref": "CloudFrontDistributionEAB06B35",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "S3BucketB0646FC4",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
              "Sid": "AllowCloudFrontServicePrincipal",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "WafWafLogGroupD60AECDC": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "aws-waf-logs-dev-webacl",
        "RetentionInDays": 3,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "WafWafLoggingConfigB60512FD": {
      "Properties": {
        "LogDestinationConfigs": [
          {
            "Fn::GetAtt": [
              "WafWafLogGroupD60AECDC",
              "Arn",
            ],
          },
        ],
        "ResourceArn": {
          "Fn::GetAtt": [
            "WafWebACL7DF0AFD1",
            "Arn",
          ],
        },
      },
      "Type": "AWS::WAFv2::LoggingConfiguration",
    },
    "WafWebACL7DF0AFD1": {
      "Properties": {
        "DefaultAction": {
          "Allow": {},
        },
        "Name": "dev-waf-webacl",
        "Rules": [
          {
            "Name": "AWSManagedRulesCommonRuleSet",
            "OverrideAction": {
              "None": {},
            },
            "Priority": 1,
            "Statement": {
              "ManagedRuleGroupStatement": {
                "Name": "AWSManagedRulesCommonRuleSet",
                "VendorName": "AWS",
              },
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AWSManagedRulesCommonRuleSetMetric",
              "SampledRequestsEnabled": true,
            },
          },
          {
            "Name": "AWSManagedRulesSQLiRuleSet",
            "OverrideAction": {
              "None": {},
            },
            "Priority": 2,
            "Statement": {
              "ManagedRuleGroupStatement": {
                "Name": "AWSManagedRulesSQLiRuleSet",
                "VendorName": "AWS",
              },
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AWSManagedRulesSQLiRuleSetMetric",
              "SampledRequestsEnabled": true,
            },
          },
        ],
        "Scope": "CLOUDFRONT",
        "VisibilityConfig": {
          "CloudWatchMetricsEnabled": true,
          "MetricName": "dev-waf-webacl-metric",
          "SampledRequestsEnabled": true,
        },
      },
      "Type": "AWS::WAFv2::WebACL",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`DistributionStack TC-DS-02: スナップショットテスト（WAF 無効化） CloudFormation テンプレートのスナップショットテスト（WAF無効） 1`] = `
{
  "Outputs": {
    "DistributionDomainName": {
      "Description": "CloudFront Distribution domain name",
      "Export": {
        "Name": "dev-DistributionDomainName",
      },
      "Value": {
        "Fn::GetAtt": [
          "CloudFrontDistributionEAB06B35",
          "DomainName",
        ],
      },
    },
    "DistributionId": {
      "Description": "CloudFront Distribution ID",
      "Export": {
        "Name": "dev-DistributionId",
      },
      "Value": {
        "Ref": "CloudFrontDistributionEAB06B35",
      },
    },
    "StaticContentBucket": {
      "Description": "S3 bucket name for static content",
      "Export": {
        "Name": "dev-StaticContentBucket",
      },
      "Value": {
        "Ref": "S3BucketB0646FC4",
      },
    },
    "StaticContentBucketArn": {
      "Description": "S3 bucket ARN for static content",
      "Export": {
        "Name": "dev-StaticContentBucketArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "S3BucketB0646FC4",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CloudFrontDistributionEAB06B35": {
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/static/*",
              "TargetOriginId": "NoWafDistributionStackCloudFrontDistributionOrigin2DC07303D",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
              "Compress": true,
              "PathPattern": "/assets/*",
              "TargetOriginId": "NoWafDistributionStackCloudFrontDistributionOrigin2DC07303D",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE",
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
              "PathPattern": "/api/*",
              "TargetOriginId": "ALBOrigin",
              "ViewerProtocolPolicy": "redirect-to-https",
            },
          ],
          "CustomErrorResponses": [
            {
              "ErrorCachingMinTTL": 10,
              "ErrorCode": 403,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 10,
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 500,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 502,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 503,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
            {
              "ErrorCachingMinTTL": 0,
              "ErrorCode": 504,
              "ResponseCode": 200,
              "ResponsePagePath": "/error.html",
            },
          ],
          "DefaultCacheBehavior": {
            "AllowedMethods": [
              "GET",
              "HEAD",
              "OPTIONS",
              "PUT",
              "PATCH",
              "POST",
              "DELETE",
            ],
            "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
            "Compress": true,
            "OriginRequestPolicyId": "216adef6-5c7f-47e4-b989-5492eafa07d3",
            "TargetOriginId": "ALBOrigin",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2and3",
          "IPV6Enabled": true,
          "Origins": [
            {
              "CustomOriginConfig": {
                "HTTPSPort": 443,
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2",
                ],
              },
              "DomainName": {
                "Fn::ImportValue": "NoWafPrereqStack:ExportsOutputFnGetAttTestAlb8F0A2B31DNSNameF75896CF",
              },
              "Id": "ALBOrigin",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "S3BucketOACDC0AF436",
                  "Id",
                ],
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": "",
              },
            },
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "S3BucketB0646FC4",
                  "RegionalDomainName",
                ],
              },
              "Id": "NoWafDistributionStackCloudFrontDistributionOrigin2DC07303D",
              "S3OriginConfig": {
                "OriginAccessIdentity": {
                  "Fn::Join": [
                    "",
                    [
                      "origin-access-identity/cloudfront/",
                      {
                        "Ref": "CloudFrontDistributionOrigin2S3Origin43D62AC5",
                      },
                    ],
                  ],
                },
              },
            },
          ],
          "PriceClass": "PriceClass_200",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "CloudFrontDistributionOrigin2S3Origin43D62AC5": {
      "Properties": {
        "CloudFrontOriginAccessIdentityConfig": {
          "Comment": "Identity for NoWafDistributionStackCloudFrontDistributionOrigin2DC07303D",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-ap-northeast-1",
          "S3Key": "faa95a81ae7d7373f3e1f242268f904eb748d8d0fdd306e8a6fe515a1905a7d6.zip",
        },
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "S3BucketB0646FC4",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "index.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "S3BucketAutoDeleteObjectsCustomResourceBCCB1A0F": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "S3BucketPolicy1BDDD1CD",
      ],
      "Properties": {
        "BucketName": {
          "Ref": "S3BucketB0646FC4",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "S3BucketB0646FC4": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
        "BucketName": "dev-static-content-123456789012",
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true,
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
        "VersioningConfiguration": {
          "Status": "Enabled",
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "S3BucketOACDC0AF436": {
      "Properties": {
        "OriginAccessControlConfig": {
          "Description": "OAC for dev static content bucket",
          "Name": "dev-oac",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4",
        },
      },
      "Type": "AWS::CloudFront::OriginAccessControl",
    },
    "S3BucketPolicy1BDDD1CD": {
      "Properties": {
        "Bucket": {
          "Ref": "S3BucketB0646FC4",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "S3BucketB0646FC4",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "S3BucketB0646FC4",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": {
                "CanonicalUser": {
                  "Fn::GetAtt": [
                    "CloudFrontDistributionOrigin2S3Origin43D62AC5",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "S3BucketB0646FC4",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:aws:cloudfront::123456789012:distribution/",
                        {
                          "Ref": "CloudFrontDistributionEAB06B35",
                        },
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "S3BucketB0646FC4",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
              "Sid": "AllowCloudFrontServicePrincipal",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
